Fixing tab spacing
git-svn-id: https://plugins.svn.wordpress.org/templ33t/branches/01_db_config@415140 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templ33t.css
+++ b/templ33t.css
@@ -79,7 +79,7 @@ div#templ33t_control ul {
 div#templ33t_control ul li {
 	display: inline-block;
 	height: 26px;
-	margin: 0px 6px 0px 4px;
+	margin: 0px 6px 0px 0px;
 	background: #dfdfdf url("../../../wp-admin/images/gray-grad.png") repeat-x left top;
 	border: 1px solid #909090;
 	border-bottom: 0px;
